Replace with include_tasks

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_oracle_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_oracle_password.yml
@@ -1,6 +1,6 @@
 # We do not need to store the oracle password as it is not used. 
 - name: Get New Password for Oracle
-  include: create_random_password.yml
+  include_tasks: create_random_password.yml
 
 # The oracle password should be set to not expire.   Expiring this password will break some OEM functionality.
 - name: Set Oracle Password
