--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_system_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_system_passwords.yml
@@ -1,16 +1,10 @@
 
 - name: Set Application (Delius)
   set_fact:
-      application: "{{ ( db_type + '-database' }}"
-  #when: not environment_name is search('eng.*')
-
-# - name: Set Application (Engineering)
-#   set_fact:
-#       application: "engineering/{{ db_type }}-database"    
-#   when: environment_name is search('eng.*')
+      application: "{{ db_type + '-database' }}"
 
 - name: Get New Password for {{ db_username }}
-  include: create_random_password.yml
+  include_tasks: create_random_password.yml
 
 # There is a potential for this task to fail due to AWS throttling, so allow it to retry a few times if needed
 - name: Record New Database Password for {{ db_username }} in Parameter Store
