--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_application_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_application_passwords.yml
@@ -1,11 +1,11 @@
 
 - name: Set Application (Delius)
   set_fact:
-      application: "{{ ( 'delius-core' if (environment_name == 'delius-core-dev') else 'delius' ) + '/' + db_type + '-database' }}"
+      application: "{{ db_type + '-database' }}"
   when: not environment_name is search('eng.*')
 
 - name: Get New Password for {{ db_username }}
-  include: create_random_password.yml
+  include_tasks: create_random_password.yml
 
 # Check if application database user exists. There are cases where they may only exist in certain environments
 - name: Check Application Database User {{ db_username }} Exists
@@ -31,9 +31,6 @@
           overwrite_value: changed
           string_type: "SecureString"
           region: "{{ region }}"
-          aws_access_key: "{{ assumed_role.sts_creds.access_key }}"
-          aws_secret_key: "{{ assumed_role.sts_creds.secret_key }}"
-          security_token: "{{ assumed_role.sts_creds.session_token }}"
       register: record_db_password
       retries: 10
       delay: "{{ 60 | random }}"
