--- a/playbooks/oracle_password_rotation/password_rotation.yml
+++ b/playbooks/oracle_password_rotation/password_rotation.yml
@@ -3,8 +3,16 @@
   gather_facts: no
   become: yes
   become_user: oracle
-  roles:
-     - { role: all_password_rotation, when: ( environment_name is defined ) or ( rotate_database_passwords | default(false) | bool ) }
+  tasks:
+    - debug: var=playbook_dir
+    - shell: ls -l {{ playbook_dir }}
+      register: out
+    - debug: var=out
+    - shell:  ls -l {{ playbook_dir }}/../alfresco_wallet/alfresco_wallet
+      register: out1
+    - debug: var=out1
+  # roles:
+  #    - { role: all_password_rotation, when: ( environment_name is defined ) or ( rotate_database_passwords | default(false) | bool ) }
 
 # Sync'ing OEM passwords will happen twice when run in the engineering accounts (once by the above job when calling out after changing passwords); and
 # then again below.   However this is a sync only and will not result in 2 password changes and so is harmless.   (We do not want to suppress the
