Delegate to localhost

--- a/playbooks/oracle_password_rotation/password_rotation.yml
+++ b/playbooks/oracle_password_rotation/password_rotation.yml
@@ -6,9 +6,11 @@
   tasks:
     - debug: var=playbook_dir
     - shell: ls -l {{ playbook_dir }}
+      delegate_to: localhost
       register: out
     - debug: var=out
     - shell:  ls -l {{ playbook_dir }}/../alfresco_wallet/alfresco_wallet
+      delegate_to: localhost
       register: out1
     - debug: var=out1
   # roles:
