Stay as privileged user

--- a/playbooks/oracle_password_rotation/password_rotation.yml
+++ b/playbooks/oracle_password_rotation/password_rotation.yml
@@ -7,11 +7,13 @@
     - debug: var=playbook_dir
     - shell: ls -l {{ playbook_dir }}
       delegate_to: localhost
+      become: no
       register: out
     - debug: var=out
     - shell:  ls -l {{ playbook_dir }}/../alfresco_wallet/alfresco_wallet
       delegate_to: localhost
       register: out1
+       become: no
     - debug: var=out1
   # roles:
   #    - { role: all_password_rotation, when: ( environment_name is defined ) or ( rotate_database_passwords | default(false) | bool ) }
