Create roles directory

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_wallet_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_wallet_password.yml
@@ -18,6 +18,13 @@
   when: change_password.rc != 0
   block:
 
+    - name: Create Local Roles Directory
+      file:
+        path: ~/.ansible/roles/recreate_wallet
+        state: directory
+      delegate_to: localhost
+      become: no
+
     # We cannot use run_once in combination with the block conditional (it will just
     # pick any host in the play which is likely to be one where "change_password.rc != 0"
     # is not true, and hence skip the whole task), so instead:
