Force symbolic link

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_wallet_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_wallet_password.yml
@@ -36,6 +36,7 @@
         dest: ~/.ansible/roles/recreate_wallet
         src: "{{ recreate_wallet_code_location }}"
         state: link
+        force: true
       throttle: 1
       delegate_to: localhost
       become: no    
