Replace with include_tasks

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/generate_asm_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/generate_asm_password.yml
@@ -10,7 +10,7 @@
   when: environment_name is search('eng.*')
 
 - name: Get New Password for ASM
-  include: create_random_password.yml
+  include_tasks: create_random_password.yml
 
 # Allow retries in case of password change storm
 - name: Record New ASM Password in Parameter Store
