Replace with include_tasks

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_asm_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_asm_passwords.yml
@@ -2,6 +2,6 @@
 - name: Set ASM Passwords in ASM Instance
   script: set_asm_password.sh
   environment:
-      SYS_PASSWORD: "{{ lookup('aws_ssm', '/{{ environment_name }}/{{ application }}/db/oradb_sys_password', aws_access_key=assumed_role.sts_creds.access_key, aws_secret_key=assumed_role.sts_creds.secret_key, aws_security_token=assumed_role.sts_creds.session_token, region=region ) }}"
-      ASMSNMP_PASSWORD: "{{ lookup('aws_ssm', '/{{ environment_name }}/{{ application }}/db/oradb_asmsnmp_password', aws_access_key=assumed_role.sts_creds.access_key, aws_secret_key=assumed_role.sts_creds.secret_key, aws_security_token=assumed_role.sts_creds.session_token, region=region ) }}"
+      SYS_PASSWORD: "{{ lookup('aws_ssm', '/{{ environment_name }}/{{ application }}/db/oradb_sys_password', region=region ) }}"
+      ASMSNMP_PASSWORD: "{{ lookup('aws_ssm', '/{{ environment_name }}/{{ application }}/db/oradb_asmsnmp_password', region=region ) }}"
   
