--- a/playbooks/oracle_password_rotation/engineering_password_rotation/tasks/rotate_agent_registration_password.yml
+++ b/playbooks/oracle_password_rotation/engineering_password_rotation/tasks/rotate_agent_registration_password.yml
@@ -5,7 +5,7 @@
   changed_when: false
 
 - name: Create New Password for Agent Registration
-  include: ../../all_password_rotation/tasks/create_random_password.yml
+  include_tasks: ../../all_password_rotation/tasks/create_random_password.yml
 
 - name: Record New Password for Agent Registration in Parameter Store
   community.aws.aws_ssm_parameter_store:
