--- a/playbooks/oracle_password_rotation/engineering_password_rotation/tasks/rotate_oem_passwords.yml
+++ b/playbooks/oracle_password_rotation/engineering_password_rotation/tasks/rotate_oem_passwords.yml
@@ -33,7 +33,7 @@
   when: get_sys_primary_remote_lock.rc > 0
 
 - name: Create New Password for SYSMAN
-  include: ../../all_password_rotation/tasks/create_random_password.yml
+  include_tasks: ../../all_password_rotation/tasks/create_random_password.yml
 
 - name: Record New Password for SYSMAN in Parameter Store
   community.aws.aws_ssm_parameter_store:
@@ -117,7 +117,7 @@
           ansible_aws_ssm_timeout: 900
 
 # - name: Create New Password for Nodemanager
-#   include: ../../all_password_rotation/tasks/create_random_password.yml
+#   include_tasks: ../../all_password_rotation/tasks/create_random_password.yml
 
 # - name: Record New Password for Nodemanager in Parameter Store
 #   community.aws.aws_ssm_parameter_store:
