--- a/playbooks/oracle_password_rotation/engineering_password_rotation/tasks/rotate_rman_password.yml
+++ b/playbooks/oracle_password_rotation/engineering_password_rotation/tasks/rotate_rman_password.yml
@@ -1,5 +1,5 @@
 - name: Get New Password for RMAN
-  include: ../../all_password_rotation/tasks/create_random_password.yml
+  include_tasks: ../../all_password_rotation/tasks/create_random_password.yml
 
 - name: Set RMAN Password in Catalog Database
   script: set_rman_password.sh
@@ -11,7 +11,7 @@
 
 # Exclude delius-core-non-prod as we have replaced this with individual entries for Dev
 - name: Loop Through Environments and Update the SSM Parameter for the RMAN Password
-  include: set_rman_password.yml
+  include_tasks: set_rman_password.yml
   vars:
      aws_account_id: "{{ aws_account_ids[item] }}"
      aws_account_name: "{{ item | regex_replace('^hmpps-','') }}"
