--- a/playbooks/oracle_password_rotation/engineering_password_rotation/tasks/sync_monitoring_passwords.yml
+++ b/playbooks/oracle_password_rotation/engineering_password_rotation/tasks/sync_monitoring_passwords.yml
@@ -11,7 +11,7 @@
       sysman_password: "{{ lookup('aws_ssm', '/{{ environment_name }}/engineering/oem-database/db/oradb_sysman_password', decrypt=true, aws_access_key=assumed_engineering_role.sts_creds.access_key, aws_secret_key=assumed_engineering_role.sts_creds.secret_key, aws_security_token=assumed_engineering_role.sts_creds.session_token ) }}"
 
 - name: Update the OEM Targets to Match the SSM Parameters
-  include: set_monitoring_passwords.yml
+  include_tasks: set_monitoring_passwords.yml
   vars:
      aws_account_id: "{{ aws_account_ids['hmpps-' + target_environment_name] }}"
      engineering_environment: "{{ environment_name.split('-')[1] }}"
