Remove keys and unwanted code

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/generate_asm_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/generate_asm_password.yml
@@ -1,13 +1,7 @@
  
 - name: Set Application (Delius)
   set_fact:
-      application: "{{ ( 'delius-core' if (environment_name == 'delius-core-dev') else 'delius' ) + '/' + db_type + '-database' }}"
-  when: not environment_name is search('eng.*')
-
-- name: Set Application (Engineering)
-  set_fact:
-      application: "engineering/{{ db_type }}-database"      
-  when: environment_name is search('eng.*')
+      application: "{{ db_type + '-database' }}"
 
 - name: Get New Password for ASM
   include_tasks: create_random_password.yml
@@ -20,9 +14,6 @@
       overwrite_value: changed
       string_type: "SecureString"
       region: "{{ region }}"
-      aws_access_key: "{{ assumed_role.sts_creds.access_key }}"
-      aws_secret_key: "{{ assumed_role.sts_creds.secret_key }}"
-      security_token: "{{ assumed_role.sts_creds.session_token }}"
   retries: 4
   delay: "{{ 60 | random }}"
   throttle: 1
