Remove role creds

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/unlock_system_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/unlock_system_passwords.yml
@@ -37,8 +37,8 @@
         register: get_sys_primary_remote_lock
         changed_when: false
         environment:
-            DB_NAME: "{{ hostvars[groups[db_type + '_primarydb'][0]]['database_primary_sid'] }}"
-            SYS_PASSWORD: "{{ lookup('aws_ssm', '/{{ environment_name }}/{{ application }}/db/oradb_sys_password', aws_access_key=assumed_role.sts_creds.access_key, aws_secret_key=assumed_role.sts_creds.secret_key, aws_security_token=assumed_role.sts_creds.session_token, region=region ) }}"
+            DB_NAME: "{{ hostvars[groups[database_environment + '_primarydb'][0]]['database_primary_sid'] }}"
+            SYS_PASSWORD: "{{ lookup('aws_ssm', '/{{ environment_name }}/{{ application }}/db/oradb_sys_password', region=region ) }}"
 
       - name: Unlock SYS in Primary Database
         script: unlock_db_password.sh
