--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/unlock_system_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/unlock_system_passwords.yml
@@ -58,9 +58,9 @@
             DB_NAME: "{{ database_sid }}"
             SYS_PASSWORD: "{{ lookup('aws_ssm', '/{{ environment_name }}/{{ application }}/db/oradb_sys_password', aws_access_key=assumed_role.sts_creds.access_key, aws_secret_key=assumed_role.sts_creds.secret_key, aws_security_token=assumed_role.sts_creds.session_token, region=region ) }}"
         loop:
-            - "{{ hostvars[groups[db_type + '_primarydb'][0]]['database_primary_sid'] }}"
-            - "{{ hostvars[groups[db_type + '_standbydb1'][0]]['database_standby_sid'] if (groups[db_type + '_standbydb1'] is defined) else 'NONE' }}"
-            - "{{ hostvars[groups[db_type + '_standbydb2'][0]]['database_standby_sid'] if (groups[db_type + '_standbydb2'] is defined) else 'NONE' }}"
+            - "{{ hostvars[groups[database_environment + '_primarydb'][0]]['database_primary_sid'] }}"
+            - "{{ hostvars[groups[database_environment + '_standbydb1'][0]]['database_standby_sid'] if (groups[database_environment + '_standbydb1'] is defined) else 'NONE' }}"
+            - "{{ hostvars[groups[database_environment + '_standbydb2'][0]]['database_standby_sid'] if (groups[database_environment + '_standbydb2'] is defined) else 'NONE' }}"
         loop_control:
             loop_var: database_sid
 
