Revert find to correct path

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
@@ -226,7 +226,7 @@
 
           - name: Find Ansible Config Files Specifying the Audited Interaction Repo
             find:
-              paths: /
+              paths: ${GITHUB_WORKFLOW}/inventory/ansible
               contains: audited_interaction_repo
               recurse: true
             register: audited_interaction_repos
