--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,6 @@
 # Add a team or username to this file
 # Example:
 # *   @ministryofjustice/operations-engineering
-* @ministryofjustice/hmpps-migration
 .github/* @ministryofjustice/hmpps-migration
+.github/oracle* @ministryofjustice/hmpps-dba
+* @ministryofjustice/hmpps-migration
