--- a/.github/workflows/oracle-db-schedule-delius-dev-backup.yml
+++ b/.github/workflows/oracle-db-schedule-delius-dev-backup.yml
@@ -1,8 +1,22 @@
 name: "Oracle: scheduled_delius_core_dev_delius_primarydb_database_backup"
+run-name: "Oracle: ???-backup"
 on:
-  schedule:
-    - cron: '30 08 * * 1,2,4,5'
-    - cron: '30 08 * * 3'
+#   schedule:
+#     - cron: '30 08 * * 1,2,4,5'
+#     - cron: '30 08 * * 3'
+  workflow_dispatch:
+    inputs:
+      TargetEnvironment:
+        description: "Target environment"
+        required: true
+        type: choice
+        options:
+          - "delius-core-dev"
+          - "delius-core-test"
+          - "delius-core-training"
+          - "delius-core-stage"
+          - "delius-core-pre-prod"
+          - "delius-core-prod"
 jobs:
   prepare-parameters:
     runs-on: ubuntu-latest
@@ -14,12 +28,21 @@ jobs:
         run: |
           [ "${{github.event.schedule}}" == '30 08 * * 1,2,4,5' ] && Period="daily" || Period="weekly"
           echo "Period=$Period" >> $GITHUB_OUTPUT
-  run-workflow-call:
-    needs: prepare-parameters
-    uses:
-      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-backup.yml@main
-    with:
-      TargetEnvironment: delius-core-dev
-      TargetHost: delius_primarydb
-      Period: ${{ needs.prepare-parameters.outputs.Period }}
-    secrets: inherit
+        env:
+          TargetEnvironment: delius-core-dev
+          TargetHost: delius_primarydb
+          Period: $Period
+      - name: Output Github Env
+        id: outputenv
+        run: |
+          echo ${{ github.env }}
+          cat ${{ github.env }}
+  # run-workflow-call:
+  #   needs: prepare-parameters
+  #   uses:
+  #     ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-backup.yml@main
+  #   with:
+  #     TargetEnvironment: delius-core-dev
+  #     TargetHost: delius_primarydb
+  #     Period: ${{ needs.prepare-parameters.outputs.Period }}
+  #   secrets: inherit
