Missing project_name in ssm password parameters

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_system_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_system_passwords.yml
@@ -9,14 +9,11 @@
 # There is a potential for this task to fail due to AWS throttling, so allow it to retry a few times if needed
 - name: Record New Database Password for {{ db_username }} in Parameter Store
   community.aws.aws_ssm_parameter_store:
-      name: "/{{ environment_name }}/{{ application }}/db/{{ 'oradb_' if (db_username != 'delius_audit_pool') else '' }}{{ db_username }}_password"
+      name: "/{{ environment_name }}/{{ project_name }}/{{ application }}/db/{{ 'oradb_' if (db_username != 'delius_audit_pool') else '' }}{{ db_username }}_password"
       value: "{{ new_password }}"
       overwrite_value: changed
       string_type: "SecureString"
       region: "{{ region }}"
-      # aws_access_key: "{{ assumed_role.sts_creds.access_key }}"
-      # aws_secret_key: "{{ assumed_role.sts_creds.secret_key }}"
-      # security_token: "{{ assumed_role.sts_creds.session_token }}"
   register: record_db_password
   retries: 10
   delay: "{{ 60 | random }}"
