--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
@@ -74,7 +74,7 @@
 
 - name: Set Application (Delius)
   set_fact:
-      application: "{{ database_type + '-database' }}"
+      application_database: "{{ database_type + '-database' }}"
 
 #  The rest of this play is in a block so we can re-enable monitoring even if it fails
 - name: Rotate Passwords
@@ -151,7 +151,7 @@
       # for rotating the password in the Alfresco or Audit wallets.
       - name: Remember Existing SYSTEM Password
         set_fact:
-            original_system_password: "{{ lookup('aws_ssm', '/{{ environment_name }}/{{ application }}/db/oradb_system_password',region=region ) }}"
+            original_system_password: "{{ lookup('aws_ssm', '/{{ environment_name }}/{{ project_name }}/{{ application }}/db/oradb_system_password',region=region ) }}"
         when:  
           - database_type == 'delius'
           
