--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
@@ -74,7 +74,7 @@
 
 - name: Set Application (Delius)
   set_fact:
-      application_database: "{{ database_type + '-database' }}"
+      application: "{{ database_type + '-database' }}"
 
 #  The rest of this play is in a block so we can re-enable monitoring even if it fails
 - name: Rotate Passwords
