--- a/playbooks/oracle_ha/build-ha/tasks/restore-primary-to-standby.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/restore-primary-to-standby.yml
@@ -63,11 +63,11 @@
       become: true
       become_user: "{{ rdbms_service_user.name }}"
 
-    - name: (main/restore-primary-to-standby) Set ssm parameter option if required
-      set_fact:
-        ssm_parameter_option: "-p {{ ssm_option }}"
-        poll_value: 0
-      when: update_ssm_parameter_restore
+    # - name: (main/restore-primary-to-standby) Set ssm parameter option if required
+    #   set_fact:
+    #     ssm_parameter_option: "-p {{ ssm_option }}"
+    #     poll_value: 0
+    #   when: update_ssm_parameter_restore
 
     - name: (main/restore-primary-to-standby) Set use backup flag and RMAN catalog connection if not using Active Duplication
       set_fact:
